--- a/AdoptApp/src/main/resources/static/adopt-frontend/src/App.css
+++ b/AdoptApp/src/main/resources/static/adopt-frontend/src/App.css
@@ -1,4 +1,18 @@
 
+@font-face {
+  font-family: 'mainFont';
+  font-style: normal;
+  font-weight: 400;
+  src: url('fonts/Juri Zaech - FrontageCondensed-Outline.otf'); /* IE9 Compat Modes */
+  src: local('mainFont'), local('mainFont'),
+       url('fonts/Juri Zaech - FrontageCondensed-Outline.otf') format('embedded-opentype'), /* IE6-IE8 */
+}
+.MainText{
+  font-family: mainFont;
+  font-size: 400%;
+  margin-left: 28%;
+  color:  #2E4158;
+}
 body{
   margin : 0;
   padding: 0;
@@ -14,7 +28,7 @@ body{
 
 .App__Aside {
   width: 50%;
-  background-color: #66DAC7;
+  background-color: #ABE7DB;
 }
 
 .App__Form {
