--- a/adopt-frontend/src/modules/app/App.css
+++ b/adopt-frontend/src/modules/app/App.css
@@ -241,14 +241,11 @@ body {
 }
 
 .mainPositionSection{
-    border-style: solid;
-    border-width: 2px;
-    border-color: blue;
     height: 59vh;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    border: 2px solid #d3d3d3;
+    background-color: white;
     border-radius: .5em;
     padding: 2%;
     overflow: hidden;
@@ -260,3 +257,5 @@ body {
 .FormButton{
     margin-top: 2vh;
 }
+
+
