Listado para usuarios registrados

--- a/adopt-frontend/src/modules/animal/components/animalStyles.css
+++ b/adopt-frontend/src/modules/animal/components/animalStyles.css
@@ -6,3 +6,17 @@ Label {
 .file64Label{
     font-weight: bold;
 }
+
+.previousNextButtons{
+    margin-top: 2vh;
+}
+
+.nextButton{
+    float: right;
+    display: block;
+}
+
+.previousButton{
+display: block;
+float: left;
+}
