--- a/adopt-frontend/src/styles/imageStyle.css
+++ b/adopt-frontend/src/styles/imageStyle.css
@@ -1,4 +1,7 @@
 .preview {
-    width: 100%;
-    height: 100%;
+    display: block;
+    max-width:40vw;
+    max-height:30vh;
+    width: auto;
+    height: auto;
 }
