--- a/adopt-frontend/src/modules/animal/components/lostAnimals/styles/styles.css
+++ b/adopt-frontend/src/modules/animal/components/lostAnimals/styles/styles.css
@@ -31,6 +31,7 @@
     width:100%;
     background-color: white;
     height: 30vh;
+    padding: 2vh;
 }
 
 
@@ -51,4 +52,17 @@ position: absolute;
 opacity: 0.5;
 }
 
+.marker-modal-text{
+    width:62%;
+    height: 25vh;
+    margin-left: 30vw;
+
+}
+
+.marker-modal-image{
+    float: left;
+    width: 35%;
+    height: 20vh;
+
+}
 
