--- a/adopt-frontend/src/modules/app/App.css
+++ b/adopt-frontend/src/modules/app/App.css
@@ -38,7 +38,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-color: #D8F6F6
+    background-color: #D8F6F6;
+   
 }
 
 .App {
