--- a/adopt-frontend/src/modules/common/styles/common.css
+++ b/adopt-frontend/src/modules/common/styles/common.css
@@ -122,7 +122,7 @@ width: 100px;
 .modal-data{
     width:62%;
     height: 25vh;
-    margin-left: 22vw;
+
 
 }
 
@@ -133,4 +133,12 @@ width: 100px;
     margin-top: 1vh;
     text-align: left;
     margin-left: 2vw;
+ 
+}
+
+
+.modal-data-field p{
+font-weight: bold;
+display: inline-block;
+ 
 }
