--- a/adopt-frontend/src/modules/common/styles/common.css
+++ b/adopt-frontend/src/modules/common/styles/common.css
@@ -142,3 +142,26 @@ font-weight: bold;
 display: inline-block;
  
 }
+
+.carouselContainer{
+    width: 93vw;
+    height: 30vh;
+    margin-top: 2vh;
+    overflow-x: scroll;
+}
+
+.carouselImage{
+    
+    max-height: 30vh;
+    max-width: 25%;
+    float: left;
+    margin-left: 2vw;
+}
+
+.singleMarkerMapContainer{
+    width: 93vw;
+    height: 30vh;
+    background-color: #D8F6F6;
+    margin-top: 2vh;
+}
+
