--- a/adopt-frontend/src/modules/common/styles/common.css
+++ b/adopt-frontend/src/modules/common/styles/common.css
@@ -1,13 +1,17 @@
+.bigMapContainer{
+    height: 90vh;
+    width: 93vw;
+    margin-top: 2vh; 
+}
+
 .markersMapMain{
 margin-top: 200vh;
 width: 100px;
 }
 
 .markersMap{
-    height: 90vh;
-    width: 93vw;
-    margin-top: 2vh;
-    
+width: 100%;
+height: 100%;
 }
 
 .markersMapMain{
@@ -152,7 +156,7 @@ display: inline-block;
 
 .carouselImage{
     
-    max-height: 30vh;
+    max-height: 28vh;
     max-width: 25%;
     float: left;
     margin-left: 2vw;
@@ -164,4 +168,5 @@ display: inline-block;
     background-color: #D8F6F6;
     margin-top: 2vh;
 }
+
 
