--- a/adopt-frontend/src/modules/animal/components/lostAnimals/styles/styles.css
+++ b/adopt-frontend/src/modules/animal/components/lostAnimals/styles/styles.css
@@ -68,11 +68,11 @@ opacity: 0.5;
 
 .lostAnimalDetailContainer{
     width: 50vw;
-    height: 25vh;
-    margin-top: 14vh;
+    height: 30vh;
+    margin-top: 2vh;
     margin-left: 40vw;
-    padding : 3vh;
-    background-color: #D8F6F6;
+    padding : 5vh;
+    background-color: white;
     
 }
 
@@ -103,4 +103,14 @@ opacity: 0.5;
 .locationsMarkersMap{
 height: 80vh;
 width: 94vw;
+}
+
+.talk-box-wrapper {
+    width: 200px;
+}
+
+.button{
+    margin-top:2vh;
+    margin-left: 44vw;
+    display: inline-block;
 }
