--- a/adopt-frontend/src/modules/animal/components/styles/styles.css
+++ b/adopt-frontend/src/modules/animal/components/styles/styles.css
@@ -1,10 +1,11 @@
 .adoptionAnimalDetailContainer{
     width: 50vw;
     height: 35vh;
-    margin-top: 14vh;
+    margin-top: 10vh;
     padding : 3vh;
-    background-color: #D8F6F6;
+    background-color: white;
     margin-left: 40vw;
+    border-radius: 10px;
     
 }
 
