--- a/adopt-frontend/src/modules/user/components/styles/user.css
+++ b/adopt-frontend/src/modules/user/components/styles/user.css
@@ -24,6 +24,7 @@ margin-left: 22vw;
    border-radius: 10px;
    padding: 2vh;
    margin-top: 2vh;
+   background-color: white;
 }
 
 .animalPreferences p  {
@@ -37,6 +38,7 @@ margin-left: 22vw;
     border-style: solid;
     border-radius: 10px;
     padding: 2vh;
+    background-color: white;
 }
 
 .distancePreferences p {
@@ -54,6 +56,7 @@ font-size: 1.8vh;
     margin-top: 2vh;
     height: 10vh;
     text-align: left;
+    background-color:white;
 }
 .checkSection Label {
 
