--- a/adopt-frontend/src/styles/cardStyle.css
+++ b/adopt-frontend/src/styles/cardStyle.css
@@ -15,9 +15,7 @@
 
 .cardBody{
     width: 100%;
-    height: 100%;
-    border-style: solid;
-    border-width: 1px;
+    height: 32vh;
 }
 
 .buttons{
