--- a/adopt-frontend/src/modules/common/styles/common.css
+++ b/adopt-frontend/src/modules/common/styles/common.css
@@ -172,4 +172,22 @@ display: inline-block;
     margin-top: 2vh;
 }
 
+.notificationCell{
+    width:  10vw;
+    font-weight: bold;
+}
+
+.notificationSection{
+    margin-left: 25vw;
+    margin-top: 5vh;
+    background-color:white;
+    border-radius: 10px;
+    width: 45vw;
+    padding: 5vh;
+}
+
+.notificationSection h3 {
+    text-align: center;
+}
+
 
