--- a/adopt-frontend/src/modules/common/styles/common.css
+++ b/adopt-frontend/src/modules/common/styles/common.css
@@ -191,3 +191,33 @@ display: inline-block;
 }
 
 
+.shelterListSection {
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 2vh;
+
+}
+
+.shelterListSection td {
+width: 15vh;
+    
+}
+
+.shelterListSection p {
+    font-weight: bold;
+}
+
+.namesRow {
+    width: 100%;
+    border-bottom: black;
+    border-bottom-style: solid;
+    background: #f6f3f3;
+
+}
+
+.shelterTable {
+    width: 93vw;
+    text-align: center;
+
+}
+
